--- a/style.css
+++ b/style.css
@@ -928,7 +928,7 @@ div#article-parent {
     background-color: #fffafa;
     border: 0 solid #DDDDDD;
     float: none;
-    margin: 10px 50px;
+    margin: 10px 0 10px 40px;
     padding: 0;
     width: 190px;
 	height: 100%;
